# skills

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
docs/: DOMAIN_CANDIDATES.md  dev-tooling-ideas.md  roadmap.md
docs/agents/: adr.md  domain.md  plans.md  triage-labels.md
docs/handoffs/: 2026-06-05-1600-issues-24-31-tdd-reflection.md  2026-06-16-1600-triage-epic-46-claude-md.md  2026-06-16-2006-issues-38-42-43.md  INDEX.md  TEMPLATE.md
scripts/: bump_release.py  install-dc23-skills.sh
skills/engineering/: README.md
skills/engineering/begin-coding/: SKILL.md
skills/engineering/domain-review/: SKILL.md
skills/engineering/grill-with-docs/: PROVENANCE.md  SKILL.md
skills/engineering/project-handoff/: SKILL.md
skills/engineering/setup-dc23-skills/: PROVENANCE.md  SKILL.md  triage-labels.md
skills/engineering/setup-dc23-skills/assets/: domain.md  issue-tracker-github.md  plans.md
skills/engineering/to-issues/: PROVENANCE.md  SKILL.md
skills/engineering/triage/: OUT-OF-SCOPE.md  PROVENANCE.md  SKILL.md
skills/project-handoff/: PROVENANCE.md  SKILL.md
skills/review-plugin/: SKILL.md
skills/tdd/: REFERENCES.md  SKILL.md
skills/utility/: README.md
tests/: test_bump_release.py
